# hotel-recommender

./: .env.example  .gitignore  FINAL_INTEGRATION_SUCCESS_REPORT.md  MVP_COMPLETION_REPORT.md  README.md  api_client_test.py  deploy_mvp.py  deployment_report.txt  e2e_test_results.json  performance_test.py  pyproject.toml  requirements.txt  test_frontend.py  test_rakuten_direct.py  test_rakuten_integration.py  test_simple_api.py
api/: cache.py  main.py  schemas.py
api/providers/: __init__.py  hotel_base.py  hotel_rakuten.py  station_base.py  station_google.py
api/services/: distance.py  hotel_service.py  recommendation.py  resolver.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_api_endpoints.py  test_e2e_integration.py  test_frontend.py  test_hotel_providers.py  test_main.py  test_recommendation.py  test_station_providers.py  test_utilities.py
